Correction gestion des dates